// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > Snapshots > matches active state snapshot 1`] = `
<button
  aria-pressed="false"
  class="toggle toggle--default toggle--size-default"
  data-state="off"
  data-testid="toggle"
  type="button"
>
  Test content
</button>
`;

exports[`Toggle > Snapshots > matches default snapshot 1`] = `
<button
  aria-pressed="false"
  class="toggle toggle--default toggle--size-default"
  data-state="off"
  data-testid="toggle"
  type="button"
>
  Test content
</button>
`;

exports[`Toggle > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-pressed="false"
  class="toggle toggle--default toggle--size-default"
  data-disabled=""
  data-state="off"
  data-testid="toggle"
  disabled=""
  type="button"
>
  Test content
</button>
`;

exports[`Toggle > Snapshots > matches hover state snapshot 1`] = `
<button
  aria-pressed="false"
  class="toggle toggle--default toggle--size-default"
  data-state="off"
  data-testid="toggle"
  type="button"
>
  Test content
</button>
`;
